Fix nav bar alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,16 +27,12 @@ h1 {
     color: white; /* Set color of app name */
 }
 
-nav {
-    display: flex;
-    align-items: center;
-}
-
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
+    align-items: center;
 }
 
 ul li {
